working on mobile padding issue

--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,9 @@ main {
 .diceContainer {
     display: grid;
     grid-template: auto auto / repeat(5, 1fr);
-    gap: 20px;
-    margin-bottom: 10px;;
+    gap: 10px;
+    margin-bottom: 10px;
+    padding: 0 10px;
 }
 
 button {
@@ -108,4 +109,13 @@ button {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+
+
+@media (max-width: 400px) {
+    .diceContainer button {
+        height: 30px;
+        width: 30px;
+        font-size: 1.2rem;
+    }
 }
